# Projet-NLP

./: pyproject.toml
.github/workflows/: cd.yml  ci.yml
infra/: Dockerfile
